--- a/client/goner.html
+++ b/client/goner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="client/css/goner.css">
      <script type="text/javascript" src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
      <script type="module" src="https://unpkg.com/three-orbitcontrols@2.110.3/OrbitControls.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
@@ -11,12 +12,20 @@
     <title>Goner</title>
 </head>
 <body>
-    <canvas id="ctx"></canvas>
-    <script>
-        
-        </script>
-            <script type="text/javascript" src="client/Init.js"></script>
-            <script type="text/javascript" src="client/js/Player.js" ></script> 
-     <script src="client/game.js" type="text/javascript"></script>
+
+    <div class="floor">
+        <script src="client/js/modelLoader.js"></script>
+        <canvas id="ctx"></canvas>
+        <div class="top_screen">
+           <div id="userId" >
+              
+           </div>
+        </div>
+        <script type="text/javascript" src="client/Init.js"></script>
+        <script type="text/javascript" src="client/js/Player.js" ></script> 
+    <script src="client/game.js" type="text/javascript"></script>
+    </div>
+
+   
 </body>
 </html>
