added animation to header
added models files

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="../css/index.css"> -->
+    <link rel="stylesheet" href="client/css/index.css">
     <title>Goner online</title>
 </head>
 <body>
-    <header><div><a href="/login"><p>login</p></a></div></header>
+    <header><div class="headDesign">
+        <div class="goner"><h2>Goner Online</h2></div>
+        <div class="login_container">
+            <a href="/login"><p>login</p></a>
+            <a href="/signup"><p>SignUp</p></a>
+            <a href="/about"><p>About</p></a>
+        </div>  
+    </div></header>
+    
 </body>
 </html>
