--- a/client/html/loginpage.html
+++ b/client/html/loginpage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="client/css/loginpage.css">
+    <!-- <link rel="stylesheet" href="../css/loginpage.css"> -->
     <script type="text/javascript" src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <title>Goner Login</title>
 </head>
