--- a/client/goner.html
+++ b/client/goner.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="floor">
-        <script src="client/js/modelLoader.js"></script>
+        
         <canvas id="ctx"></canvas>
         <div class="top_screen">
            <div id="userId" >
@@ -22,6 +22,7 @@
            </div>
         </div>
         <script type="text/javascript" src="client/Init.js"></script>
+        <script type="text/javascript" src="client/js/modelLoader.js"></script>
         <script type="text/javascript" src="client/js/Player.js" ></script> 
     <script src="client/game.js" type="text/javascript"></script>
     </div>
