--- a/client/goner.html
+++ b/client/goner.html
@@ -8,7 +8,13 @@
      <script type="text/javascript" src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
      <script type="module" src="https://unpkg.com/three-orbitcontrols@2.110.3/OrbitControls.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
+   
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <!-- <script type="text/javascript" 
+    src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r117/examples/js/loaders/FBXLoader.js"></script> -->
+    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script type="text/javascript" src="client/js/Input.js"></script>
     <title>Goner</title>
 </head>
 <body>
@@ -20,11 +26,12 @@
            <div id="userId" >
               
            </div>
+           <div id="mousePosDisplay"></div>
         </div>
         <script type="text/javascript" src="client/Init.js"></script>
         <script type="text/javascript" src="client/js/modelLoader.js"></script>
         <script type="text/javascript" src="client/js/Player.js" ></script> 
-    <script src="client/game.js" type="text/javascript"></script>
+        <script src="client/game.js" type="text/javascript"></script>
     </div>
 
    
