--- a/client/goner.html
+++ b/client/goner.html
@@ -21,10 +21,11 @@
               
            </div>
         </div>
-        <script type="text/javascript" src="client/Init.js"></script>
+        <!-- <script type="text/javascript" src="client/Init.js"></script>
         <script type="text/javascript" src="client/js/modelLoader.js"></script>
         <script type="text/javascript" src="client/js/Player.js" ></script> 
-    <script src="client/game.js" type="text/javascript"></script>
+    <script src="client/game.js" type="text/javascript"></script> -->
+    <script type="text/javascript" src="client/dist/game.bundle.js"></script>
     </div>
 
    
